Admin-card details alignment-fixed

--- a/Source/Angular/IMS/src/styles.css
+++ b/Source/Angular/IMS/src/styles.css
@@ -1626,6 +1626,12 @@ body {
 
 /* Admin Add Role - Checkbox */
 
-.checkboxalignment {
+#checkboxalignment {
   margin-top: 2%;
+}
+
+
+/* Admin - Text alignments */
+#text-alignment{
+  padding-top: 1%;
 }
